--- a/ioteca_web/index.html
+++ b/ioteca_web/index.html
@@ -11,6 +11,7 @@
     <div ui-view ng-controller="AppCtrl"></div>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="app/settings.js"></script>
     <script src="app/router.js"></script>
     <script src="app/controllers/app.js"></script>
